$Id: ChangeLog,v 1.265 2005/08/18 15:37:49 christianwelzel Exp $

2005-08-18  Christian Welzel <christian.welzel@welzel-online.ch>
        * os/event.c, arch/avr/os/context_gcc.c
        Fixed bug in handling of NUTDEBUG.

2005-08-14  Christian Welzel <christian.welzel@welzel-online.ch>
        * tools/nutconf/nutconfdoc.cpp
        Corrected wxLogMessages to avoid compiler warnings.

2005-08-10  Ole Reinhardt <ole.reinhardt@embedded-it.de>
        * pro/asp.c
        Corrected documentation

2005-08-05  Ole Reinhardt <ole.reinhardt@embedded-it.de>

        * crt/Makefile, crt/seek.c, crt/tell.c, crt/fseek.c, crt/ftell.c
          include/io.h
        Added support for _seek, _tell, fseek, ftell functions
        * include/stdio.h
        Added defines: SEEK_SET, SEEK_CUR, SEEK_END
        * fs/uromfs.c
        Added IOCTL function with support for seek
        * include/fs/fs.h
        Corrected typo
        * conf/crt/crt.nut
        Added seek.c, tell.c
        * pro/asp.c, pro/ssi.c, pro/httpd.c, pro/Makefile,
          include/pro/httpd.h, include/pro/asp.h, include/pro/ssi.h
        Added support to register a custom handler for mime types.
        Added Server side include support and ASP support.
        * conf/pro/pro.nut
        Added asp.c, ssi.c
        * app/httpd/httpserv.c, app/httpd/sample/index.html,
          app/httpd/sample/asp.asp, app/httpd/sample/ssi.shtml,
          app/httpd/sample/include.inc
        Added SSI and ASP sample


2005-08-03  Matthias Ringwald  <mringwal@inf.ethz.ch>

        * os/timer.c: made nut_tick public

2005-08-02  Harald Kipp  <harald.kipp@egnite.de>

	* doc/gen/nutdoc_en.txt: Major API documentation update.
	This also includes the modification of a large number of
	source files. But only comment lines had been updated.
	No code has been changed.

	* doc/gen/nut_en.cfg.in: Added new items for Doxygen 1.4.4.
	Event example and arch directory included.


2005-07-26  Harald Kipp  <harald.kipp@egnite.de>
